SERVER-15972 Prevent stepping down without holding the global lock