src/mongo/db/repl/topology_coordinator_impl.cpp
@@ -124,6 +124,7 @@ namespace {
         _forceSyncSourceIndex(-1),
         _maxSyncSourceLagSecs(maxSyncSourceLagSecs),
         _selfIndex(-1),
+        _stepDownPending(false),
         _stepDownUntil(0),
         _electionSleepUntil(0),
         _maintenanceModeCalls(0),
@@ -940,6 +941,10 @@ namespace {
                     const OpTime latestOpTime = _latestKnownOpTime(lastOpApplied);
 
                     if (_iAmPrimary()) {
+                        if (_stepDownPending) {
+                            return HeartbeatResponseAction::makeNoAction();
+                        }
+                        _stepDownPending = true;
                         log() << "Stepping down self (priority "
                               << currentPrimaryMember.getPriority() << ") because "
                               << highestPriorityMember.getHostAndPort() << " has higher priority "
@@ -952,7 +957,7 @@ namespace {
                         if (_electionSleepUntil < until) {
                             _electionSleepUntil = until;
                         }
-                        return _stepDownSelf();
+                        return HeartbeatResponseAction::makeStepDownSelfAction(_selfIndex);
                     }
                     else if ((highestPriorityMemberOptime == _selfIndex) &&
                              (_electionSleepUntil <= now)) {
@@ -1013,8 +1018,12 @@ namespace {
 
                     // Step down whomever has the older election time.
                     if (remoteElectionTime > _electionTime) {
+                        if (_stepDownPending) {
+                            return HeartbeatResponseAction::makeNoAction();
+                        }
+                        _stepDownPending = true;
                         log() << "stepping down; another primary was elected more recently";
-                        return _stepDownSelfAndReplaceWith(remotePrimaryIndex);
+                        return HeartbeatResponseAction::makeStepDownSelfAction(_selfIndex);
                     }
                     else {
                         log() << "another PRIMARY detected and it should step down"
@@ -1039,8 +1048,12 @@ namespace {
         // stepdown if we can't.
         if (_iAmPrimary()) {
             if (CannotSeeMajority & _getMyUnelectableReason(now, lastOpApplied)) {
+                if (_stepDownPending) {
+                    return HeartbeatResponseAction::makeNoAction();
+                }
+                _stepDownPending = true;
                 log() << "can't see a majority of the set, relinquishing primary";
-                return _stepDownSelf();
+                return HeartbeatResponseAction::makeStepDownSelfAction(_selfIndex);
             }
 
             LOG(2) << "Choosing to remain primary";
@@ -1189,6 +1202,7 @@ namespace {
             _followerMode = newMemberState.s;
             if (_currentPrimaryIndex == _selfIndex) {
                 _currentPrimaryIndex = -1;
+                _stepDownPending = false;
             }
             break;
         case MemberState::RS_STARTUP:
@@ -1587,6 +1601,7 @@ namespace {
 
         // By this point we know we are in Role::follower
         _currentPrimaryIndex = -1; // force secondaries to re-detect who the primary is
+        _stepDownPending = false;
 
         if (_followerMode == MemberState::RS_SECONDARY &&
                 _currentConfig.getNumMembers() == 1 &&
@@ -1880,7 +1895,7 @@ namespace {
             return false;
         }
         _stepDownUntil = until;
-        _stepDownSelf();
+        _stepDownSelfAndReplaceWith(-1);
         return true;
     }
 
@@ -1913,18 +1928,42 @@ namespace {
         }
     }
 
-    HeartbeatResponseAction TopologyCoordinatorImpl::_stepDownSelf() {
-        return _stepDownSelfAndReplaceWith(-1);
+    bool TopologyCoordinatorImpl::stepDownIfPending() {
+        if (!_stepDownPending) {
+            return false;
+        }
+
+        int remotePrimaryIndex = -1;
+        for (std::vector<MemberHeartbeatData>::const_iterator it = _hbdata.begin();
+                it != _hbdata.end(); ++it) {
+            const int itIndex = indexOfIterator(_hbdata, it);
+            if (itIndex == _selfIndex) {
+                continue;
+            }
+
+            if (it->getState().primary() && it->up()) {
+                if (remotePrimaryIndex != -1) {
+                    // two other nodes think they are primary (asynchronously polled)
+                    // -- wait for things to settle down.
+                    remotePrimaryIndex = -1;
+                    log() << "replSet info two remote primaries (transiently)";
+                    break;
+                }
+                remotePrimaryIndex = itIndex;
+            }
+        }
+        _stepDownSelfAndReplaceWith(remotePrimaryIndex);
+        return true;
     }
 
-    HeartbeatResponseAction TopologyCoordinatorImpl::_stepDownSelfAndReplaceWith(int newPrimary) {
+    void TopologyCoordinatorImpl::_stepDownSelfAndReplaceWith(int newPrimary) {
         invariant(_role == Role::leader);
         invariant(_selfIndex != -1);
         invariant(_selfIndex != newPrimary);
         invariant(_selfIndex == _currentPrimaryIndex);
         _currentPrimaryIndex = newPrimary;
         _role = Role::follower;
-        return HeartbeatResponseAction::makeStepDownSelfAction(_selfIndex);
+        _stepDownPending = false;
     }
 
     void TopologyCoordinatorImpl::adjustMaintenanceCountBy(int inc) {
